working on sessions

--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -1248,7 +1248,7 @@
    <extension
          point="org.eclipse.emf.emfstore.client.sessionprovider">
       <sessionProvider
-            class="org.eclipse.emf.emfstore.client.ui.dialogs.login.DefaultSessionProvider">
+            class="org.eclipse.emf.emfstore.client.ui.dialogs.login.BasicUISessionProvider">
       </sessionProvider>
    </extension>
    <extension
