--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -1310,4 +1310,23 @@
            name="NEWcompareProjects">
      </command>
    </extension>
+   <extension
+         point="org.eclipse.emf.emfstore.common.observer">
+      <observer
+            extensionPointName="org.eclipse.emf.emfstore.client.ui.observer1"
+            observerAttributeName="org.eclipse.emf.emfstore.client.ui.observer1">
+      </observer>
+   </extension>
+   <extension
+         point="org.eclipse.emf.emfstore.client.loginObserver">
+      <observer
+            loginObserver="org.eclipse.emf.emfstore.client.ui.views.emfstorebrowser.provider.ESBrowserLabelDecorator">
+      </observer>
+   </extension>
+   <extension
+         point="org.eclipse.emf.emfstore.client.logoutObserver">
+      <observer
+            logoutObserver="org.eclipse.emf.emfstore.client.ui.views.emfstorebrowser.provider.ESBrowserLabelDecorator">
+      </observer>
+   </extension>
 </plugin>
